# fastapi_proj

./: .env  LICENSE  main.py  pyproject.toml  test.db
app/: aimge.py  app.py  data.py
app/services/: api_client_1.py  imagekit_service.py
